--- a/src/book/05_quadratic_functions.tex
+++ b/src/book/05_quadratic_functions.tex
@@ -146,7 +146,7 @@ Graph $g(x)=-2(x-2)(x-8)$.
 \begin{solution}
 The $x$-intercepts given here are at $x_1=2$ and $x_2=8$.  To find the vertex, we take the average, which is $\dfrac{2+8}{2}=5$.  Finding the $y$-coordinate of the vertex, we get $g(5)=-2(5-2)(5-8)=18$; thus, the vertex is $(5,18)$.  We plot the parabola given these three points, and is shown on the top of the next page.  $\Box$  
 \end{solution}
-\begin{figure}[!h]
+\begin{figure}[!ht]
 \centering
     \begin{tikzpicture}[xscale=0.10,yscale=0.10]
       \draw[<->] (-20,0) -- (20,0) node[right] {$x$};
@@ -234,7 +234,7 @@ The difference of squares is defined that, for some real functions $a$ and $b$, 
 We haven't seen this example yet, so we will prove it.  There are two ways of proving this: algebraically and geometrically.  The algebraic method involves proving it using FOIL.  All we need to do is expand the right side of the equation.  $$(a-b)(a+b)=a^2+ab-ab-b^2=a^2-b^2.$$
 The second way of proving this is geometrically.  Imagine a square with length $a$ where we cut off a slice of length $b$, as seen in the first figure.  We then attach it to the other side to produce the second figure.
 
-\begin{figure}[!h]
+\begin{figure}[!ht]
     \centering
     \begin{tikzpicture}[xscale=0.5,yscale=0.5]
       \draw (-3,-3) rectangle (3,3);
