--- a/src/book/0A_parent_functions.tex
+++ b/src/book/0A_parent_functions.tex
@@ -4,7 +4,7 @@
 \begin{document}
 \chapter{Table of Parent Functions}
 \noindent This section includes all the parent functions you should know before entering Suncoast.  They are used frequently throughout this text; as a result, be sure to learn them as quick as possible.  
-\begin{figure}[!h]
+\begin{figure}[!ht]
     \centering
     \hspace{\stretch{1}}
     \begin{tikzpicture}[scale=0.2]
@@ -27,7 +27,7 @@
     \end{tikzpicture}\hspace{\stretch{1}}
 \end{figure}
 
-\begin{figure}[!h]
+\begin{figure}[!ht]
     \centering
     \hspace{\stretch{1}}
     \begin{tikzpicture}[scale=0.2]
@@ -51,7 +51,7 @@
     \end{tikzpicture}\hspace{\stretch{1}}
 \end{figure}
 
-\begin{figure}[!h]
+\begin{figure}[!ht]
     \centering
     \hspace{\stretch{1}}
     \begin{tikzpicture}[scale=0.2]
@@ -74,7 +74,7 @@
     \end{tikzpicture}\hspace{\stretch{1}}
 \end{figure}
 
-\begin{figure}[!h]
+\begin{figure}[!ht]
     \centering
     \hspace{\stretch{1}}
     \begin{tikzpicture}[scale=0.2]
@@ -99,7 +99,7 @@
     \end{tikzpicture}\hspace{\stretch{1}}
 \end{figure}
 
-\begin{figure}[!h]
+\begin{figure}[!ht]
     \centering
     \hspace{\stretch{1}}
     \begin{tikzpicture}[scale=0.2]
@@ -139,7 +139,7 @@
     \end{tikzpicture}\hspace{\stretch{1}}
 \end{figure}
 
-\begin{figure}[!h]
+\begin{figure}[!ht]
     \centering
     \begin{tikzpicture}[scale=0.20]
     \tkzInit[xmin = -10, xmax = 10, ymin = -10, ymax = 10]
