--- a/src/book/10_piecewise_functions.tex
+++ b/src/book/10_piecewise_functions.tex
@@ -31,7 +31,7 @@ Let's consider the graphs of each of the functions.  For the floor function, for
 
 Below are the graphs.
 
-\begin{figure}[!h]
+\begin{figure}[!ht]
     \centering
     \begin{tikzpicture}[scale=0.75,yscale=0.75]
     \tkzInit[xmin = -5, xmax = 5, ymin = -5, ymax = 5]
