--- a/src/book/13_conic_sections.tex
+++ b/src/book/13_conic_sections.tex
@@ -313,7 +313,7 @@ With this, we conclude our study of ellipses.  Hopefully, this wasn't terribly d
 \section{Hyperbolas}
 \noindent In this section, we introduce the final conic: hyperbolas.  As you will see in this section, hyperbolas resemble two opposite facing parabolas. Below are a depiction of a horizontal and a vertical hyperbola.
 
-\begin{figure}[!h]
+\begin{figure}[!ht]
     \centering
     \begin{tikzpicture}[xscale=0.25,yscale=0.25]
         \draw[<->] (-10,0) -- (10,0) node[right] {$x$};
