--- a/src/book/07_rational_functions.tex
+++ b/src/book/07_rational_functions.tex
@@ -19,7 +19,7 @@ Rational functions hold many of the same properties as polynomial functions.  Th
 \begin{definition}{Definition of a Rational Function}{ratfunc}
 Given polynomial functions $P_1(x)$ and $P_2(x)$, where $P_2(x)\neq 0$, we define rational function $R(x)$ such that $$R(x)=\dfrac{P_1(x)}{P_2(x)}.$$
 \end{definition}
-Let’s take a look at some examples of functions and determine whether or not they are rational functions.
+Let's take a look at some examples of functions and determine whether or not they are rational functions.
 \begin{example}
 Determine which of the following are rational functions. \newline (a) $f(x)=\dfrac{x+2}{x^2}$ \hspace{\stretch{1}} (b) $f(x)=\dfrac{\sqrt{x}+2}{x}$ \hspace{\stretch{1}} (c) $f(x)=\dfrac{2}{x^2+2x+1}$ \newline \hspace{20mm} (d) $f(x)=\dfrac{x(x+2)}{x+2}$ \hspace{18mm} (e) $f(x)=\dfrac{x+\frac{1}{x}}{x+2}$.
 \end{example}
@@ -34,15 +34,15 @@ We take this one part at a time.
 
 (d)	Yes, because both $x(x+2)$ and $x+2$ are polynomials.
 
-(e)	Yes, because $\dfrac{x+\dfrac{1}{x}}{x+2}=\dfrac{x^2+1}{x^2+2x}$. If this is not at all obvious why this is true, don’t worry, the next section will cover this specific type of rational functions. $\Box$
+(e)	Yes, because $\dfrac{x+\dfrac{1}{x}}{x+2}=\dfrac{x^2+1}{x^2+2x}$. If this is not at all obvious why this is true, don't worry, the next section will cover this specific type of rational functions. $\Box$
 \end{solution}
-Now that we’ve got the hang of what rational functions are, we can move on to manipulating them. Starting simple, let’s add and subtract rational functions. To understand the process behind adding and subtracting these functions, let’s first observe how we add and subtract rational numbers (a.k.a. fractions). For example, what process would you use to simplify $\dfrac{2}{5}+\dfrac{1}{7}$? Well, we need a common denominator. So that we can later extrapolate to variables, we will use the method in which we multiply the two denominators together.  Thus, we know the common denominator to be $5\cdot 7=35$.
+Now that we've got the hang of what rational functions are, we can move on to manipulating them. Starting simple, let's add and subtract rational functions. To understand the process behind adding and subtracting these functions, let's first observe how we add and subtract rational numbers (a.k.a. fractions). For example, what process would you use to simplify $\dfrac{2}{5}+\dfrac{1}{7}$? Well, we need a common denominator. So that we can later extrapolate to variables, we will use the method in which we multiply the two denominators together.  Thus, we know the common denominator to be $5\cdot 7=35$.
 
 To get this as a denominator for each fraction, we must multiply each fraction by a "fancy form of one". The first fraction will be multiplied by $\dfrac{7}{7}$ and the second by $\dfrac{5}{5}$, this will achieve our common denominator as detailed below.
 $$\dfrac{2}{5}+\dfrac{1}{7}=\left(\dfrac{2}{5}\cdot 1\right)+\left(\dfrac{1}{7}+1\right)=\left(\dfrac{2}{5}\cdot\dfrac{5}{5}\right)+\left(\dfrac{1}{7}\cdot\dfrac{7}{7}\right).$$
 Now we can combine the fractions together by adding the numerators to get our final answer.
 $$\left(\dfrac{14}{35}\right)+\left(\dfrac{5}{35}\right)=\dfrac{14+5}{35}=\dfrac{19}{35}.$$
-Let’s repeat the same process, but this time with variables.
+Let's repeat the same process, but this time with variables.
 \begin{example}
 Combine $\dfrac{a_1}{a_2}+\dfrac{b_1}{b_2}$ into a single fraction.
 \end{example}
@@ -91,7 +91,7 @@ Using this knowledge of the operations associated with rational functions, let's
 Most people would consider to follow the division rules stated in the \hyperlink{section.7.1}{previous} section since fractions are inherently dividing two things, and they would be mostly right! All we need to do is implement this idea and we'll arrive at the right answer in no time.
 \subsection{Method 1: Convert to Multiplication}
 While there is not a general form of a complex fraction, here is one possible case demonstrating the first method. $$\dfrac{\left(\dfrac{f_1(x)}{f_2(x)}\right)}{\left(\dfrac{g_1(x)}{g_2(x)}\right)}=\dfrac{f_1(x)}{f_2(x)}\div\dfrac{g_1(x)}{g_2(x)}=\dfrac{f_1(x)}{f_2(x)}\cdot\dfrac{g_2(x)}{g_1(x)}.$$
-What must be done after this step in terms of simplification depends on the four functions within it. Let’s look at some examples.
+What must be done after this step in terms of simplification depends on the four functions within it. Let's look at some examples.
 \begin{example}
 Simplify $\dfrac{1+\frac{1}{x}}{x^2-x}$ into a single rational expression.  Note any discontinuities.
 \end{example}
@@ -112,7 +112,7 @@ Throughout the problem, we see $x=0$ as a discontinuity, but the entire denomina
 Now, let's consider the other way of solving problems like this.  This is a bit more intuitive and less obvious, but it can be a bit quicker. 
 \subsection{Method 2: Multiply by a Fancy Form of One}
 \noindent Consider again the general form of a complex fraction: $$\dfrac{\left(\dfrac{f_1(x)}{f_2(x)}\right)}{\left(\dfrac{g_1(x)}{g_2(x)}\right)}=\dfrac{f_1(x)}{f_2(x)}\div\dfrac{g_1(x)}{g_2(x)}=\dfrac{f_1(x)}{f_2(x)}\cdot\dfrac{g_2(x)}{g_1(x)}.$$
-While this new method does the exact same thing computationally, it’s just another way you can simplify complex fractions.
+While this new method does the exact same thing computationally, it's just another way you can simplify complex fractions.
 
 As a trick, to simplify everything, we can multiply the complex fractions by the product of its denominators (divided by itself, so everything stays constant). This cancels out the denominators of the two fractions within the expression.
 \begin{example}
@@ -144,7 +144,7 @@ There are multiple methods of doing this $-$ primarily the standard long divisio
 Factor the numerator in order to divide the expression $\dfrac{x^2-2x+3}{x-3}$.
 \end{example}
 \begin{solution}
-What we initially want to do is be able to factor out an $x-3$ term from part of the numerator. We are already close to being able to do this with the first two terms ($x^2-2x$); what we need instead is $(x^2-3x)$ so we can factor out an $x$-term, leaving us $x(x-3)$. While we don’t have this currently, we can force this into the equation by adding a fancy form of zero: $$\dfrac{x^2-2x+3}{x-3}=\dfrac{x^2+(-3x+x)-3}{x-3}=\dfrac{(x^2-3x)+(x-3)}{x-3}=\dfrac{x(x-3)+1(x-3)}{x-3}.$$ We can now break this down by dividing: $$\dfrac{x(x-3)+1(x-3)}{x-3}=\dfrac{x(x-3)}{x-3}+\dfrac{x-3}{x-3}=x+1.$$ $\Box$
+What we initially want to do is be able to factor out an $x-3$ term from part of the numerator. We are already close to being able to do this with the first two terms ($x^2-2x$); what we need instead is $(x^2-3x)$ so we can factor out an $x$-term, leaving us $x(x-3)$. While we don't have this currently, we can force this into the equation by adding a fancy form of zero: $$\dfrac{x^2-2x+3}{x-3}=\dfrac{x^2+(-3x+x)-3}{x-3}=\dfrac{(x^2-3x)+(x-3)}{x-3}=\dfrac{x(x-3)+1(x-3)}{x-3}.$$ We can now break this down by dividing: $$\dfrac{x(x-3)+1(x-3)}{x-3}=\dfrac{x(x-3)}{x-3}+\dfrac{x-3}{x-3}=x+1.$$ $\Box$
 \end{solution}
 Let's use this on another example.  This time, the denominator won't be linear.
 \begin{example}
@@ -208,7 +208,7 @@ This means that the answer is $x^3-5x^2+11x+53+\dfrac{324}{x-8}$. $\Box$
 \end{solution}
 \noindent Now that we've discussed how to divide these polynomials, we need to discuss how to solve equations with rational functions.  Since a rational function is built on polynomials, this process won't be much different than solving polynomial equations.
 \section{Rational Equations}
-\noindent Now that we’ve shown how to manipulate rational expressions, let’s look at how to solve equations which contain them. At a high level, you want to manipulate the equation in such a way (using the methods taught in the previous three sections) to achieve the following form: $$\dfrac{P_1(x)}{P_2(x)}=0\text{, where }P_1(x)\text{ and }P_2(x)\text{ are polynomials.}$$
+\noindent Now that we've shown how to manipulate rational expressions, let's look at how to solve equations which contain them. At a high level, you want to manipulate the equation in such a way (using the methods taught in the previous three sections) to achieve the following form: $$\dfrac{P_1(x)}{P_2(x)}=0\text{, where }P_1(x)\text{ and }P_2(x)\text{ are polynomials.}$$
 Once everything is coalesced into a single simplified rational expression you can multiply both sides by $P_2(x)$, leaving us with the polynomial equation $P_1(x)=0$. This can then be solved for the solutions using the procedures taught in the previous three chapters.
 
 \begin{remark}
@@ -220,7 +220,7 @@ Let's look at some examples regarding this.
 Solve the rational equation $\dfrac{x+1}{x+2}=\dfrac{1-x}{x+2}$.
 \end{example}
 \begin{solution}
-To get this equation into the form discussed above, let’s move everything over to the left side. We can then easily simplify since there is already a common denominator.
+To get this equation into the form discussed above, let's move everything over to the left side. We can then easily simplify since there is already a common denominator.
 $$\dfrac{x+1}{x+2}=\dfrac{1-x}{x+2}\implies \dfrac{x+1}{x+2}-\frac{1-x}{x+2}=0 \implies \dfrac{2x}{x+2}=0.$$ First, we solve the denominator and get $x\neq -2$.  Solving the top, we get $x=0$.  Since the two do not match, the final answer is $x=0$. $\Box$
 \end{solution}
 \begin{example}
@@ -251,7 +251,7 @@ Finally, let's take a look at graphing rational functions, the part of this chap
 
 Whereas when you want to graph, for example, a parabola, you only need to find the vertex, the $y$-intercept, and the $x$-intercepts (if there are any). With rational expressions, you will need to find all of the following: 
 
-\begin{table}[!h]
+\begin{table}[!ht]
     \centering
     \begin{tabular}{|c|c|c|}
         \toprule
@@ -265,7 +265,7 @@ Whereas when you want to graph, for example, a parabola, you only need to find t
 
 \noindent It is not expected that you know what all or even most of these mean; right now, we only expect you to be familiar with $x$ and $y$-intercepts.
 
-We’ll start with the discontinuities section since it is both the easiest to understand and to compute. A vertical asymptote appears in a graph whenever (in the most simplified form of the function) you divide by zero. For example, for the function $f(x)=\dfrac{1}{x+1}$ there exists a vertical asymptote at $x=-1$ since at this point the expression becomes $\frac{1}{0}$. In general, the vertical asymptotes can be found by setting the denominator equal to zero. Around the vertical asymptote the magnitude of the function will be very large since we are dividing by a number close to zero.
+We'll start with the discontinuities section since it is both the easiest to understand and to compute. A vertical asymptote appears in a graph whenever (in the most simplified form of the function) you divide by zero. For example, for the function $f(x)=\dfrac{1}{x+1}$ there exists a vertical asymptote at $x=-1$ since at this point the expression becomes $\frac{1}{0}$. In general, the vertical asymptotes can be found by setting the denominator equal to zero. Around the vertical asymptote the magnitude of the function will be very large since we are dividing by a number close to zero.
 \begin{note}
 When asked for the asymptote(s) of a function, never give a value. Asymptotes should always be given as the equation of a line.
 \end{note}
@@ -273,7 +273,7 @@ When asked for the asymptote(s) of a function, never give a value. Asymptotes sh
 Below we can see the graph of the function $f(x)=\dfrac{1}{x-1}$ in red and its vertical asymptote $x=1$ in blue. The closer $x$ gets to $1$ the larger (in magnitude) the function becomes; this is because at these values of $x$ we divide by a number close to zero, leaving a large result. This is a defining characteristic of all vertical asymptotes.
 
 Here we can see the graph of a function with two vertical asymptotes; more specifically, the function is given by $f(x)=\dfrac{1}{(x-1)(x+2)}$.
-\begin{figure}[!h]
+\begin{figure}[!ht]
     \centering
     \begin{tikzpicture}[xscale=0.20,yscale=0.20]
       \draw[<->] (-10,0) -- (10,0) node[right] {$x$};
@@ -290,7 +290,7 @@ Here we can see the graph of a function with two vertical asymptotes; more speci
     \end{tikzpicture}
 \end{figure}
 \begin{note}
-Notice how both functions change sign as $x$ goes from one side of a vertical asymptote to the other. While this is not a rule, it’s something to keep in mind for later.
+Notice how both functions change sign as $x$ goes from one side of a vertical asymptote to the other. While this is not a rule, it's something to keep in mind for later.
 \end{note}
 \begin{wrapfigure}{r}{4cm}
     \begin{tikzpicture}[xscale=0.20,yscale=0.20]
@@ -301,7 +301,7 @@ Notice how both functions change sign as $x$ goes from one side of a vertical as
       \draw[red] (1,-10) -- (1,10);
     \end{tikzpicture}
 \end{wrapfigure}
-Now, we have the graph of the function $f(x)=\dfrac{x+2}{(x-1)(x+2)}$. The reason this specific function was chosen was to show the differences between holes and vertical asymptotes. According to our method of finding vertical asymptotes we should see two of them in the graph $-$ at $x=-2,1$. Instead, we only see the second one with a "hole" at the point $(-2,-\frac{1}{2})$. Why? Well, there’s one exception to the vertical asymptote rule: if at a given point the expression becomes $\frac{0}{0}$ you will have a hole, if the expression is any other non-zero constant divided by zero there will be an asymptote.
+Now, we have the graph of the function $f(x)=\dfrac{x+2}{(x-1)(x+2)}$. The reason this specific function was chosen was to show the differences between holes and vertical asymptotes. According to our method of finding vertical asymptotes we should see two of them in the graph $-$ at $x=-2,1$. Instead, we only see the second one with a "hole" at the point $(-2,-\frac{1}{2})$. Why? Well, there's one exception to the vertical asymptote rule: if at a given point the expression becomes $\frac{0}{0}$ you will have a hole, if the expression is any other non-zero constant divided by zero there will be an asymptote.
 
 In this case, when we plug in $x=-2$, the expression becomes $f(-2)=\dfrac{-2+2}{(-2-1)(-2+2)}=\dfrac{0}{0}$; this indicates that there is a hole at this point.  On the other hand, when we plug in $x=1$, the expression becomes $f(1)=\dfrac{1+2}{(1-1)(1+2)}=\dfrac{0}{0}$. Since the numerator is not also zero, we know that we have an asymptote instead of a hole at $x=1$.
 \begin{note}
@@ -351,14 +351,14 @@ Now, we need to determine the discontinuities.  To do this, we set the denominat
 
 Now, let's determine the end behavior.  The easiest way to do this is to FOIL.  This gives us $$\dfrac{x(x-2)}{(3x-1)(x+2)}=\dfrac{x^2-2x}{3x^2+5x-2}.$$ From this expression, we can determine that there will be a horizontal asymptote given by $y(x)=\dfrac{1}{3}$.
 
-Let’s now put all of this information onto a graph, then slowly fill in the remainder based on information we can easily deduce.
+Let's now put all of this information onto a graph, then slowly fill in the remainder based on information we can easily deduce.
 
 For the two regions on the end we can essentially fill these in like the parent function $\frac{1}{x}$. Since we see a zero on the right-most section (a point below the horizontal asymptote), we know the graph must curve down towards negative infinity. Since there is no zero on the left-most section, we know the graph must curve towards positive infinity near the other asymptote. This is seen in the left graph.
 
 Any section between vertical asymptotes will look like either a quadratic or cubic equation. To determine which of these it will looks like we suggest plugging in values. $f(-1.999)$ will be some large negative number; likewise, $f(.333)$ will be some large positive number. Therefore, because of this difference, we know the section between will look like a cubic. The right graph shows the final graph. $\Box$
 \end{solution}
 Congratulations! These types of problems are quite difficult and take a lot of time.  Please continue to attempt these problems, for they will be plentiful in pre-calculus and beyond.  
-\begin{figure}[!h]
+\begin{figure}[!ht]
     \centering
     \begin{tikzpicture}[xscale=0.30,yscale=0.20]
       \draw[<->] (-10,0) -- (10,0) node[right] {$x$};
