--- a/src/book/11_systems_of_equations.tex
+++ b/src/book/11_systems_of_equations.tex
@@ -17,7 +17,7 @@
   A linear system of equations is a set of multiple linear equations.  The “solution” can be thought of as asking “for what values do all of these equations in the system hold?”
 \end{remark}
 \section{Solutions to Systems via Graphing}
-Three different methods will be taught to find the solution to a given system.  We’ll start with arguably the easiest to understand: graphing.  Looking for the solution to a system $-$ when all of the (linear) equations hold $-$ is the same as searching for a set of values which lie on the graphs of each equation.
+Three different methods will be taught to find the solution to a given system.  We'll start with arguably the easiest to understand: graphing.  Looking for the solution to a system $-$ when all of the (linear) equations hold $-$ is the same as searching for a set of values which lie on the graphs of each equation.
 
 \begin{wrapfigure}{r}{5cm}
     \begin{tikzpicture}[xscale=0.25,yscale=0.25]
@@ -29,7 +29,7 @@ Three different methods will be taught to find the solution to a given system.  
      \end{tikzpicture} 
 \end{wrapfigure}
 
-Let’s look at an example where we have two variables (so we can graph in the Cartesian plane) and two equation:
+Let's look at an example where we have two variables (so we can graph in the Cartesian plane) and two equation:
 
 \begin{example}
 Find the solution to $\begin{cases} 2x-y=-3 \\ x+y=0 \end{cases}$ via graphing.
@@ -37,7 +37,7 @@ Find the solution to $\begin{cases} 2x-y=-3 \\ x+y=0 \end{cases}$ via graphing.
 \begin{solution}
 Remember, we want to find a value or set of values which lie on both lines; this is essentially asking to find the intersection point of the two lines.
 
-Based on the graph to the right, we can see that $(-1,1)$ is our solution to the system.  Let’s check our answer by plugging these coordinates back into the original equations.  \begin{align*}
+Based on the graph to the right, we can see that $(-1,1)$ is our solution to the system.  Let's check our answer by plugging these coordinates back into the original equations.  \begin{align*}
     \text{EQN 1:}& \hspace{0.25in} 2(-1)-(1)=-3 \\ \text{EQN 2:}& \hspace{0.25in}  (-1)+(1)=0
 \end{align*}$\Box$
 \end{solution}
